# global_optimization_alg

./: .gitmodules  README.md
Algoritm/: Algoritm.sln  Algoritm.vcxproj  Algoritm.vcxproj.filters  CMakeLists.txt  characteristics.cpp  gsa_results.csv  main.cpp  optimization  scan_results.csv  structs.h  test_gcgen.cpp  visual.py  visualization.h
